# wfreport

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
backend/: requirements.txt
backend/ai/: client.py  prompts.py
backend/app/: api.py  main.py
backend/charts/: plotly_figures.py  render_png.py
backend/config/: platform_map.yaml  prompts.yaml  settings.yaml
backend/core/: history.py  logging_conf.py  metrics.py  parser.py  week.py
backend/reports/: excel_builder.py  narratives.py  ppt_builder.py  web_report.py
docs/superpowers/plans/: 2026-07-12-wfreport.md
docs/superpowers/specs/: 2026-07-12-wfreport-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  store.js  style.css
frontend/src/components/: ConfigPage.vue  GeneratePage.vue  HelpButton.vue  HistoryPage.vue  Onboarding.vue  PreviewPage.vue  SettingsPage.vue  ToastHost.vue  UploadPage.vue  WorkflowProgress.vue
frontend/src/components/steps/: StepExport.vue  StepFill.vue  StepPreview.vue  StepUpload.vue
resource/: 2026年第二十七周周报-王凡.pptx  上周.xlsx  下周.xlsx  本周.xlsx
scripts/: gen_check.py
tests/: test_integration.py
tests/ai/: test_client.py  test_prompts.py
tests/app/: test_api.py
tests/charts/: test_plotly_figures.py  test_render_png.py
tests/core/: test_history.py  test_metrics.py  test_parser.py  test_week.py  test_workspace_merge.py
tests/reports/: test_excel_builder.py  test_narratives.py  test_ppt_builder.py  test_ppt_shape_names.py
